<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/white"
    tools:context=".atividades.Login">

    <ScrollView android:id="@+id/login_scroll"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="90dp"
                android:src="@drawable/logo"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_height="50dp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:inputType="textPassword"
                android:layout_height="50dp"
                android:hint="@string/senha"/>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/logar"
                android:onClick="logar"/>

            <Button
                android:id="@+id/btRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/cadastrar"
                android:onClick="cadastrar" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>